# internal/interface/dto/req/business_instagram.go
@@ -1,0 +1,12 @@
+package req
+
+import "time"
+
+type BusinessInstagram struct {
+	Name         string    `json:"name"`
+	BusinessName string    `json:"business_name"`
+	InstagramID  string    `json:"instagram_id"`
+	Memo         string    `json:"memo"`
+	StartDate    time.Time `json:"start_date"`
+	Status       int       `json:"status"`
+}
